--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -34,7 +34,7 @@
                             <img class="width-80px border-radius-round" src="https://scontent-icn1-1.xx.fbcdn.net/v/t1.0-9/1514627_858869820895635_1119508450771753991_n.jpg?_nc_cat=110&_nc_ht=scontent-icn1-1.xx&oh=a32aa56b750b212aee221da7e9711bb1&oe=5D8781A4">
                         </div>
                         <div class="col-md-10 col-sm-7">
-                            <span class="font-size-16 text-bold pdd-btm-5">Brown</span><span class="font-size-12 text-gray"> / gracefulBrown@woowahan.com</span>
+                            <span  class="font-size-16 text-bold pdd-btm-5">Brown</span><span class="font-size-12 text-gray"> / gracefulBrown@woowahan.com</span>
                             <p class="font-size-13 text-dimgray lh-1-3">
                                 백엔드 개발자: 설계.테스트.생산성.클린코드.멘토링에 관심이 많음 <br>
                                 Woowahantechcourse Organizer / Coach / Husband
@@ -57,7 +57,7 @@
                 <div class="col-lg-10 col-md-10 col-sm-10 mx-auto mrg-top-30">
                     <div class="width-100 border bottom mrg-btm-20 pdd-btm-10">
                         <span class="font-size-16">댓글</span>
-                        <span class="font-size-16 text-info">2</span>
+                        <span th:text="${comments.size()}"class="font-size-16 text-info"></span>
                     </div>
                     <div class="comment">
                         <ul class="list-unstyled list-info">
@@ -65,18 +65,43 @@
                                 <img class="thumb-img img-circle"
                                      src="https://avatars2.githubusercontent.com/u/3433096?v=4" alt="">
                                 <div class="info">
-                                    <span href="" class="text-bold inline-block">Jun</span>
+                                    <span th:text="${comment.getAuthor().getName()}" href="" class="text-bold inline-block">Jun</span>
                                     <span class="sub-title inline-block pull-right">
                                         <i class="ti-timer pdd-right-5"></i>
                                         <span>6 min ago</span>
                                     </span>
-                                    <p class="width-80">브라운 멋져</p>
+                                    <p th:text= "${comment.getContents()}"class="comment-paragraph width-80"></p>
+                                    <textarea onkeyup="editChange(event)" th:placeholder="${comment.getContents()}"  class = "comment-edit-form"  type ="are" style ="display:none; width:70%"></textarea>
+                                </div>
+                                <div class = "comment-buttons">
+                                    <form method="post" th:action="${'/articles/'+article.getId()+'/comment/'+comment.getId()}">
+                                        <input type="hidden" name="_method" value="PUT">
+                                        <input class="comment-edit-input" name = "content" type="hidden">
+                                        <button type="submit" class = "comment-edit-save" style="display:none">
+                                            <i class="ti ti-save"></i>
+                                        </button>
+                                    </form>
+                                    <button onclick="showEdit(event)" class = "comment-edit">
+                                        <i class="ti ti-pencil"></i>
+                                    </button>
+                                    <form method="post" th:action="${'/articles/'+article.getId()+'/comment/'+comment.getId()}" >
+                                        <input type="hidden" name="_method" value="DELETE">
+                                        <button class = "comment-delete">
+                                            <i class="ti-trash"></i>
+                                        </button>
+                                    </form>
                                 </div>
                             </li>
                         </ul>
+                        <form th:action="${'/articles/'+article.getId()+'/comment'}" name = "comment" method = "post">
                         <div class="add-comment">
+                            <input id="comment-contents" name="contents" type="hidden" value="">
                             <div id="editSection"></div>
+                            <button id="save-btn" type="submit" class="btn btn-default">
+                                <i class="ti-save"></i>
+                            </button>
                         </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -92,10 +117,26 @@
             previewStyle: 'horizontal',
             events: {
                 change: function () {
+                    document.getElementById('comment-contents').setAttribute('value', editor.getMarkdown())
                 }
             },
             height: '200px'
         });
+
+        const showEdit = function(e){
+            let content = e.currentTarget.closest(".comment-item");
+            e.currentTarget.style.display = "none";
+            content.getElementsByClassName('comment-edit-form')[0].style.display = "block";
+            content.getElementsByClassName('comment-edit-save')[0].style.display = "inline";
+            content.getElementsByClassName('comment-paragraph')[0].style.display = "none";
+        }
+
+        const editChange = function(e){
+            let content = e.currentTarget.closest(".comment-item");
+            let nowContents = e.currentTarget.value;
+            console.log(nowContents);
+            content.getElementsByClassName('comment-edit-input')[0].setAttribute('value',nowContents);
+        }
     </script>
 </th:block>
 </html>
